fix(counter): add math round and align input in counter

--- a/src/components/inputs/Counter/styles.css
+++ b/src/components/inputs/Counter/styles.css
@@ -32,7 +32,7 @@
 }
 .counter-input {
   display: flex;
-  text-align: center;
+  text-align: center !important;
   outline: none;
   border: none;
   font-size: 16px;
